--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -70,6 +70,13 @@
               position:absolute;
               top:10px;
               left:50px;
+              a{
+                color:black;
+                text-decoration: none;
+                &:hover{
+                  color:red;
+                }
+              }
              }
           }
         }
