--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -23,47 +23,16 @@
       <h4>恐怖ランキング</h4>
       <nav>
         <ul>
+          <% num = 1 %>
+          <% @ranking.each do |article| %>
           <li>
-            <p class="num">1</p>
-            <p class="title">井戸</p>
+            <p class="num"><%= num %></p>
+            <p class="title">
+              <%= link_to article.title, article_path(article.id) %>
+              <% num += 1 %>
+            </p>
           </li>
-          <li>
-            <p class="num">2</p>
-            <p class="title">廃墟</p>
-          </li>
-          <li>
-            <p class="num">3</p>
-            <p class="title">仄暗い水の底から</p>
-          </li>
-          <li>
-            <p class="num">4</p>
-            <p class="title">夜の帰り道</p>
-          </li>
-          <li>
-            <p class="num">5</p>
-            <p class="title">ミラーハウス</p>
-          </li>
-          <li>
-            <p class="num">6</p>
-            <p class="title">赤い目</p>
-          </li>
-          <li>
-            <p class="num">7</p>
-            <p class="title">長い髪の女</p>
-          </li>
-          <li>
-            <p class="num">8</p>
-            <p class="title">命日</p>
-          </li>
-          <li>
-            <p class="num">9</p>
-            <p class="title">堕天</p>
-          </li>
-          <li>
-            <p class="num">10</p>
-            <p class="title">エクソシスト</p>
-          </li>
-
+          <% end %>
         </ul>
       </nav>
     </div>
