--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -95,6 +95,7 @@
       width:210px;
       background-color:#9e8b8e;
       margin:20px 20px 0 0;
+      height:470px;
       h4{
         font-size:23px;
       }
